--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,28 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.14'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'joda-time:joda-time:2.9.9'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
