--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
+    implementation 'com.jakewharton.rx2:replaying-share:2.1.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
